# Coroutine-based-web-server-in-cpp

./: .clang-format  .clangd  CMakeLists.txt  README.md
multiple-coroutine/: BUILD.md  awaitable.h  channel.h  common.h  connection.cpp  connection.h  http_parser.cpp  http_parser.h  kqueue_backend.cpp  kqueue_backend.h  main.cpp  scheduler.cpp  scheduler.h  server.cpp  server.h  task.h
my-implementation/: main.cpp
single-coroutine/: BUILD.md  awaitable.h  common.h  connection.cpp  connection.h  http_parser.cpp  http_parser.h  kqueue_backend.cpp  kqueue_backend.h  main.cpp  scheduler.cpp  scheduler.h  server.cpp  server.h  task.h
src/: CMakeLists.txt  main.cpp
src/net/: io_reactor.hpp  win32_acceptor.cpp  win32_acceptor.hpp  win32_iocp.cpp  win32_iocp.hpp  win32_iocp_reactor.cpp  win32_iocp_reactor.hpp  win32_socket_context.cpp  win32_socket_context.hpp
src/scheduler/: scheduler.cpp  scheduler.hpp  task.hpp  thread_pool.hpp
